--- a/templates/admin/verwaltung/Investment/change_list.html
+++ b/templates/admin/verwaltung/Investment/change_list.html
@@ -5,7 +5,8 @@
 {{ block.super }}
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
+<script src="{% static 'js/Chart.min.js' %}"></script>
+  <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script> -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const ctx = document.getElementById('myChart').getContext('2d');
