--- a/templates/admin/verwaltung/Investment/change_list.html
+++ b/templates/admin/verwaltung/Investment/change_list.html
@@ -4,7 +4,7 @@
 {% block extrahead %}
 {{ block.super }}
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" />
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" /> -->
 <script src="{% static 'js/Chart.min.js' %}"></script>
   <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script> -->
     <script>
